--- a/src/styles/02_atoms/_a-title.scss
+++ b/src/styles/02_atoms/_a-title.scss
@@ -1,7 +1,7 @@
 .a-title {
   font-family: $font-family-secondary;
 
-  span {
+  > span {
     display: block;
     font-weight: $font-weight-bold;
 
