--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -53,6 +53,7 @@
 // Atoms
 @import "./02_atoms/_a-btn";
 @import "./02_atoms/_a-title";
+@import "./02_atoms/_a-hamburger";
 @import "./02_atoms/_a-perex";
 @import "./02_atoms/_a-scroll-link";
 @import "./02_atoms/_a-action-link";
