--- a/src/styles/04_organisms/_o-header.scss
+++ b/src/styles/04_organisms/_o-header.scss
@@ -7,6 +7,24 @@
   justify-content: space-between;
   width: 100%;
   min-height: 100px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1)
+  border-bottom: 1px solid rgba($white, 0.1);
+
+  &__colapse {
+    @include media-breakpoint-down(lg) {
+      padding-top: 120px;
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      background-color: $gray-800;
+    }
+
+    display: flex;
+    flex-direction: row;
+
+  }
 }
 
