--- a/src/styles/04_organisms/_o-hero.scss
+++ b/src/styles/04_organisms/_o-hero.scss
@@ -11,8 +11,7 @@
     #{$root}__figure {
 
       &::before {
-
-        background-image: linear-gradient(270deg, $black 0%, rgba(0, 0, 0, 0) 100%);
+        background-image: linear-gradient(270deg, $black 0%, rgba($black, 0) 100%);
       }
     }
   }
@@ -25,13 +24,11 @@
     font-size: 5rem;
     color: $white;
 
-    span {
-
+    > span {
       @supports (-webkit-text-stroke: 1px $white) {
         color: transparent;
         -webkit-text-stroke: 1px $white;
       }
-
       @supports not (-webkit-text-stroke: 1px $white) {
         color: $black;
         // text-shadow: 0 0 2px rgba($black, 1);
@@ -68,7 +65,7 @@
       right: 0;
       left: 0;
       content: "";
-      background-image: linear-gradient(270deg, $blue 0%, rgba(39, 52, 85, 0) 100%);
+      background-image: linear-gradient(270deg, $blue 0%, rgba($blue, 0) 100%);
     }
   }
 }
