--- a/src/styles/02_atoms/_a-brand.scss
+++ b/src/styles/02_atoms/_a-brand.scss
@@ -1,4 +1,8 @@
 .a-brand {
+  @include media-breakpoint-down(lg) {
+    display: none;
+  }
+
   text-decoration: none;
   padding: 20px;
   z-index: 15;
