--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -61,6 +61,7 @@
 
 // Molecules
 @import "./03_molecules/_m-primary-nav";
+@import "./03_molecules/_m-submenu";
 
 // Organisms
 @import "./04_organisms/_o-hello";
