--- a/src/styles/04_organisms/_o-header.scss
+++ b/src/styles/04_organisms/_o-header.scss
@@ -1,4 +1,22 @@
 .o-header {
+  @include media-breakpoint-down(lg) {
+    justify-content: flex-end;
+    // border-bottom: 1px solid $gray-200;
+    max-height: 100px;
+    background-color: $white;
+
+    &::after {
+      position: absolute;
+      content:"";
+      height: 1px;
+      width: 90%;
+      bottom: -2px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: $gray-200;
+    }
+  }
+
   position: fixed;
   top: 0;
   z-index: 10;
@@ -11,15 +29,15 @@
 
   &__colapse {
     @include media-breakpoint-down(lg) {
-      padding-top: 120px;
       position: fixed;
-      top: 0;
+      top: 100px;
       right: 0;
       left: 0;
+      bottom: 0;
       display: flex;
       justify-content: center;
       flex-direction: column;
-      background-color: $gray-800;
+      background-color: $white;
     }
 
     display: flex;
