--- a/src/styles/03_molecules/_m-submenu.scss
+++ b/src/styles/03_molecules/_m-submenu.scss
@@ -1,4 +1,12 @@
 .m-submenu {
+  @include media-breakpoint-down(lg) {
+    position: relative;
+    top: 0;
+    right: 0;
+    padding: 0;
+    padding-top: 20px;
+    transform: translateX(0);
+  }
 
   @include list-unstyled;
   background: $white;
@@ -12,19 +20,48 @@
   transform: translateX(50%);
 
   &__item {
+    @include media-breakpoint-down(lg) {
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
+
+    &:last-child() {
+      padding-bottoM: 0;
+    }
+
     padding-top: 10px;
     padding-bottom: 10px;
   }
 
   &__link {
-    color: $primary;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    @include media-breakpoint-down(lg) {
+      color: $gray-800;
+    }
+
+    position: relative;
     white-space: nowrap;
     text-decoration: none;
+    padding-left: 65px;
+    padding-bottom: 5px;
+    padding-top: 5px;
 
     &:hover {
       color: $secondary;
+      font-weight: $font-weight-bold;
+
+      &::after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 5px;
+        background-color: $primary;
+        content: '';
+      }
     }
+  }
+
+  &.open {
+    display: block;
   }
 }
