--- a/src/styles/04_organisms/_o-header.scss
+++ b/src/styles/04_organisms/_o-header.scss
@@ -1,22 +1,4 @@
 .o-header {
-  @include media-breakpoint-down(lg) {
-    justify-content: flex-end;
-    // border-bottom: 1px solid $gray-200;
-    max-height: 100px;
-    background-color: $white;
-
-    &::after {
-      position: absolute;
-      content:"";
-      height: 1px;
-      width: 90%;
-      bottom: -2px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: $gray-200;
-    }
-  }
-
   position: fixed;
   top: 0;
   z-index: 10;
@@ -30,19 +12,22 @@
   &__colapse {
     @include media-breakpoint-down(lg) {
       position: fixed;
-      top: 100px;
+      top: 0;
       right: 0;
       left: 0;
       bottom: 0;
-      display: flex;
-      justify-content: center;
+      padding-top: 100px;
       flex-direction: column;
       background-color: $white;
+      display: none;
     }
 
     display: flex;
     flex-direction: row;
 
+    &.open {
+      display: flex;
+    }
   }
 }
 
