--- a/src/styles/01_base/_global.scss
+++ b/src/styles/01_base/_global.scss
@@ -16,21 +16,20 @@
 //     }
 //   }
 
-// @import url(../fonts/Syncopate-Bold.woff2);
-// @font-face {
-//   font-family: 'Syncopate';
-//   src: url('Syncopate-Bold.woff2') format('woff2'),
-//       url('Syncopate-Bold.woff') format('woff');
-//   font-weight: $font-weight-bold;
-//   font-style: normal;
-//   font-display: swap;
-// }
+@font-face {
+  font-family: 'Syncopate';
+  src: url('../fonts/Syncopate-Bold.woff2') format('woff2'),
+      url('../fonts/Syncopate-Bold.woff') format('woff');
+  font-weight: $font-weight-bold;
+  font-style: bold;
+  font-display: swap;
+}
 
-// @font-face {
-//   font-family: 'Syncopate';
-//   src: url('Syncopate-Regular.woff2') format('woff2'),
-//       url('Syncopate-Regular.woff') format('woff');
-//   font-weight: $font-weight-normal;
-//   font-style: normal;
-//   font-display: swap;
-// }
+@font-face {
+  font-family: 'Syncopate';
+  src: url('../fonts/Syncopate-Regular.woff2') format('woff2'),
+      url('../fonts/Syncopate-Regular.woff') format('woff');
+  font-weight: $font-weight-normal;
+  font-style: normal;
+  font-display: swap;
+}
