--- a/src/styles/02_atoms/_a-btn.scss
+++ b/src/styles/02_atoms/_a-btn.scss
@@ -8,7 +8,7 @@
   align-items: center;
   gap: 2rem;
   text-transform: uppercase;
-  font-family: $font-family-secondary;
+  font-family: $headings-font-family;
   padding: 2rem 2.3125rem;
   border-radius: 0.9375rem;
   font-weight: $font-weight-bold;
