--- a/src/styles/04_organisms/_o-header.scss
+++ b/src/styles/04_organisms/_o-header.scss
@@ -1,13 +1,17 @@
 .o-header {
   position: fixed;
   top: 0;
-  z-index: 10;
+  z-index: 20;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   min-height: 100px;
   border-bottom: 1px solid rgba($white, 0.1);
+
+  &.stickyNav {
+    background-color: $gray-800;
+  }
 
   &__colapse {
     @include media-breakpoint-down(lg) {
