--- a/src/styles/01_base/_variables.scss
+++ b/src/styles/01_base/_variables.scss
@@ -566,7 +566,7 @@ $aspect-ratios: (
 // scss-docs-start font-variables
 // stylelint-disable value-keyword-case
 $font-family-sans-serif:     'Open Sans', sans-serif;
-$font-family-secondary:      'Syncopate', sans-serif;
+// $font-family-secondary:      'Syncopate', sans-serif;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
 // stylelint-enable value-keyword-case
@@ -610,9 +610,9 @@ $font-sizes: (
 
 // scss-docs-start headings-variables
 $headings-margin-bottom:      $spacer * .5;
-$headings-font-family:        null;
+$headings-font-family:        'Syncopate', $font-family-sans-serif;
 $headings-font-style:         null;
-$headings-font-weight:        500;
+$headings-font-weight:        $font-weight-normal;
 $headings-line-height:        1.2;
 $headings-color:              null;
 // scss-docs-end headings-variables
