--- a/src/styles/02_atoms/_a-scroll-link.scss
+++ b/src/styles/02_atoms/_a-scroll-link.scss
@@ -1,21 +1,21 @@
 .a-scroll-link {
-    font-family: $font-family-secondary;
-    text-decoration: none;
-    font-weight: $font-weight-bold;
-    color: $white;
-    font-size: 0.875rem;
-    letter-spacing: -0.56px;
-    position: absolute;
-    bottom: 60px;
-    right: 67px;
-    z-index: 10;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
+  font-family: $headings-font-family;
+  text-decoration: none;
+  font-weight: $font-weight-bold;
+  color: $white;
+  font-size: 0.875rem;
+  letter-spacing: -0.56px;
+  position: absolute;
+  bottom: 60px;
+  right: 67px;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 
-    &:hover {
-      color: $white;
-    }
+  &:hover {
+    color: $white;
+  }
 }
 
