--- a/src/styles/03_molecules/_m-primary-nav.scss
+++ b/src/styles/03_molecules/_m-primary-nav.scss
@@ -3,7 +3,6 @@
 
   &__list {
     @include list-unstyled;
-
     @include media-breakpoint-down(lg) {
       display: flex;
       flex-direction: column;
@@ -38,11 +37,11 @@
         background-color: $gray-200;
       }
     }
-
     @include media-breakpoint-up(lg) {
+
       &:hover {
 
-        #{$root}__submenu {
+        > ul {
           display: block;
         }
       }
@@ -51,7 +50,6 @@
     list-style: none;
     padding: 39px;
     position: relative;
-
 
     &--action {
       @include media-breakpoint-down(lg) {
@@ -74,7 +72,7 @@
       font-size: 1rem;
 
       &:hover {
-        color: $white;
+        color: white;
 
         &::after {
           position: absolute;
@@ -85,6 +83,12 @@
           background-color: $primary;
           content: '';
         }
+      }
+    }
+    @include media-breakpoint-down(lg) {
+
+      &:hover {
+        color: $secondary;
       }
     }
 
@@ -104,14 +108,8 @@
       content: "";
     }
 
-    &:hover {
-      color: $secondary;
-    }
-
     &.open #{$root}__submenu {
       display: block;
     }
-
-
   }
 }
